--- a/SSDI.RequestMonitoring.UI/JComponents/Forms/PurchaseReq__Form.razor
+++ b/SSDI.RequestMonitoring.UI/JComponents/Forms/PurchaseReq__Form.razor
@@ -1,6 +1,7 @@
 ﻿@using SSDI.RequestMonitoring.UI.Contracts.Users
 @using SSDI.RequestMonitoring.UI.JComponents.Loading
 @using SSDI.RequestMonitoring.UI.Models.MasterData
+@using SSDI.RequestMonitoring.UI.Models.Requests
 @using SSDI.RequestMonitoring.UI.Models.Requests.Purchase
 @using SSDI.RequestMonitoring.UI.Models.Users
 @inject IUserSvc userSvc
@@ -224,7 +225,7 @@
                 fileBytes = ms.ToArray();
             }
 
-            var attachVM = new Purchase_Request_AttachVM
+            var attachVM = new Request_AttachVM
             {
                 UniqId = utils.GenerateUniqId(),
                 PurchaseRequestId = FormModel.Id,
@@ -239,7 +240,7 @@
         }
     }
 
-    private void RemoveFile(Purchase_Request_AttachVM file)
+    private void RemoveFile(Request_AttachVM file)
     {
         // uploadedFiles.Remove(file);
 
